[package]
name = "codecrafters-shell"
version = "0.1.0"
authors = ["Lluc Simo Margalef <lluc.simo@protonmail.com>"]
edition = "2024"
rust-version = "1.92"

[dependencies]
is_executable = "1.0.5"
rustyline = { version = "17.0.2", features = ["derive"] }
shell-words = "1.1.1"

[lints.clippy]
all = "warn"